# zero2prod

./: Cargo.toml  ReadME.md
src/: configuration.rs  configuration.yaml  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/in_memory/: app_state.rs  mod.rs
src/routes/: health_check.rs  mod.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
tests/: common.rs  health_check.rs  subscribe.rs
tests/api/: common.rs  health_check.rs  main.rs  newsletter.rs  subscribe.rs  subscriptions_confirm.rs
