[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Shir Sha'ashua <shirans@eyenet-mobile.com>"]
edition = "2021"

[lib]
# We could use any path here, but we are following the community convention
# We could specify a library name using the `name` field. If unspecified,
# cargo will default to `package.name`, which is what we want.
path = "src/lib.rs"

# Notice the double square brackets: it's an array in TOML's syntax.
# We can only have one library in a project, but we can have multiple binaries!
# If you want to manage multiple libraries in the same repository
[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies.reqwest]
version = "0.12.9"
default-features = false
# We need the `json` feature flag to serialize/deserialize JSON payloads
features = ["json", "rustls-tls"]

[dependencies]
actix-web = "4"
chrono = "0.4.39"
config = "0.15.4"
env_logger = "0.11.6"
log = "0.4.22"
once_cell = "1.20.2"
regex = "1.11.1"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.41", features = ["log"] }
tracing-actix-web = "0.7.15"
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.19", features = ["registry", "env-filter"] }
uuid = { version = "1.11.0", features = ["v4", "fast-rng", "macro-diagnostics"]}
validator = { version = "0.19.0", features = ["derive", "validator_derive"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
wiremock = "0.6.2"
fake = "3.0.1"
claims = "0.8.0"
